<resources>
    <string name="app_name">Todo Agenda</string>
    <string name="widget_name">Todo Agenda</string>
    <string name="widget_instance_name">Widget name</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="not_initialized_yet">Not initialized yet...</string>
    <string name="no_events_to_show">No events to show</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="open_prefs_desc">Open the settings of the calendar widget</string>
    <string name="go_to_today">Go to Today</string>
    <string name="add_event_desc">Add new calender event</string>
    <string name="indicator_alarm">Indicator if an alarm has been set</string>
    <string name="indicator_recurring">Indicator if the event is recurring</string>
    <string name="no_title">(No title)</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="grant_permissions_verbose">Widget requires permission to read calendars and tasks.\n
        Tap here to grant permissions.</string>
    <string name="past_header">Past and due</string>
    <string name="end_of_list_header">Other events</string>
    <string name="permissions_justification">Welcome to the Todo Agenda, the easy access to your calendars and tasks.\n\n
        To make the most of the widget you need to grant it access to your calendars and tasks.</string>
    <string name="no_widgets_found">Please add a \"Todo Agenda\" widget from the home screen of your device first.</string>
    <string name="select_a_widget_to_configure">Select a widget to configure</string>
    <string name="close">Close</string>
    <string name="go_to_home_screen">Go to home screen</string>
    <string name="task_icon" translatable="false">✔</string>
    <string name="loading_with_dots">Loading...</string>
    <string name="widget_header">Widget header</string>
    <string name="day_header">Day header</string>
    <string name="event_entry">Event entry</string>
    <string name="todays_events">Today\'s events</string>
    <string name="future_events">Future events</string>
    <string name="not_found">Not found</string>
    <string name="app_description_80_chars_max">Home screen widgets displaying events from selected calendars and task lists</string>
    <string name="app_description_4000_chars_max_part01">Todo Agenda is home screen widgets for your Android device.
        Each widget has its own settings and displays configured list of calendar events and tasks
        so that you can easily have a glimpse at your due, current and upcoming appointments.</string>
    <string name="app_description_4000_chars_max_part02">Features</string>
    <string name="app_description_4000_chars_max_part15">No advertising. Free and Open Source.</string>
    <string name="app_description_4000_chars_max_part03">Displays events from your calendars and task lists
        for the selected periods in the past and in the future.</string>
    <string name="app_description_4000_chars_max_part04">Automatically updates when you add/delete/modify an event.
        Or you may update the list instantly.</string>
    <string name="app_description_4000_chars_max_part05">Select only the calendars and task lists
        that you want to see in the widget.</string>
    <string name="app_description_4000_chars_max_part06">Create several widgets, if you need. Each widget has its own settings,
        including layouts, colors, filters, selected calendars and task lists.</string>
    <string name="app_description_4000_chars_max_part07">Customize background colors and transparency
        of different widget parts, black and white shading for texts.</string>
    <string name="app_description_4000_chars_max_part08">Scroll through the list of events.
        Use "Go to Today" button to return to today instantly.</string>
    <string name="app_description_4000_chars_max_part09">Customize the text size of the widget.</string>
    <string name="app_description_4000_chars_max_part10">Fully resizable widget with alternative layouts.</string>
    <string name="layout_prefs_desc">Place, show and hide widget elements</string>
    <string name="layout_prefs_title">Layout</string>
    <string name="widget_header_layout">Widget header layout</string>
    <string name="pref_event_entry_layout_title">Event entry layout</string>
    <string name="default_multiline_layout">Time below title</string>
    <string name="default_value">Default</string>
    <string name="single_line_layout">All in one row</string>
    <string name="appearance_day_header_alignment_desc">Set the alignment of the day header</string>
    <string name="appearance_day_header_alignment_title">Day header alignment</string>
    <string name="appearance_multiline_title_title">Multiline title</string>
    <string name="appearance_multiline_title_desc">Spread event title over multiple lines</string>
    <string name="appearance_show_days_without_events_title">Show days without events</string>
    <string name="appearance_show_days_without_events_desc">Show day headers for days without events</string>
    <string name="appearance_show_day_headers_title">Show day headers</string>
    <string name="appearance_show_day_headers_desc">Show day headers at all</string>
    <string name="show_past_events_under_one_header_title">Header for past/due events</string>
    <string name="show_past_events_under_one_header_desc">Show all past/due events under one "Past and due" header</string>
    <string name="show_event_icon_title">Show event icon</string>
    <string name="show_event_icon_desc">Show Calendar color bar / Task icon for event</string>
    <string name="appearance_abbreviate_dates_title">Abbreviate dates with Weekday</string>
    <string name="appearance_abbreviate_dates_desc">Use three-letter format for dates</string>
    <string name="colors_prefs_desc">Colors and opacity of texts and backgrounds</string>
    <string name="appearance_group_color_title">Colors</string>
    <string name="appearance_background_color_title">Background color</string>
    <string name="appearance_background_color_desc">Adjust the color of the background</string>
    <string name="appearance_past_events_background_color_title">Past events background color</string>
    <string name="appearance_past_events_background_color_desc">Adjust background color of past events</string>
    <string name="todays_events_background_color_title">Today\'s events background color</string>
    <string name="todays_events_background_color_desc">Adjust background color of today\'s events</string>
    <string name="appearance_header_theme_title">Widget header text shading</string>
    <string name="appearance_header_theme_desc">Show the header of the widget in dark or light shade</string>
    <string name="widget_header_background_color_desc">Adjust color of the widget header. Transparent by default</string>
    <string name="widget_header_background_color_title">Widget header background color</string>
    <string name="day_header_theme_title">Day header text shading</string>
    <string name="day_header_theme_desc">Show day header text in dark or light shade</string>
    <string name="appearance_entries_theme_title">Event text shading</string>
    <string name="appearance_entries_theme_desc">Show event text in dark or light shade</string>
    <string name="event_details_prefs">Event details</string>
    <string name="event_details_prefs_desc">Configure what details to show for an event</string>
    <string name="event_details_show_end_time_title">End time</string>
    <string name="event_details_show_end_time_desc">Show the event ending time</string>
    <string name="event_details_show_location_title">Show location</string>
    <string name="event_details_show_location_desc">Show or hide event location</string>
    <string name="event_details_fill_all_day_events_title">Fill all day events</string>
    <string name="event_details_fill_all_day_events_desc">Show an entry for each day of an all day event</string>
    <string name="event_details_indicators">Indicators</string>
    <string name="event_details_indicate_alert_desc">Show indicator for alerts</string>
    <string name="event_details_indicate_alert_title">Alerts</string>
    <string name="event_details_indicate_recurring_desc">Show indicator for recurring events</string>
    <string name="event_details_indicate_recurring_title">Recurring events</string>
    <string name="event_filters_prefs">Event filters</string>
    <string name="event_filters_prefs_desc">Which current, future and past events to show</string>
    <string name="all_events">All events</string>
    <string name="current_and_future_events">Current and future events</string>
    <string name="past_events">Past events</string>
    <string name="event_details_event_range_title">Date range</string>
    <string name="event_range_one_month">One month</string>
    <string name="show_past_events_with_default_color_title">Show all past events having default color</string>
    <string name="this_option_is_turned_off">(disabled)</string>
    <string name="pref_events_ended_title">Show past events</string>
    <string name="pref_hide_based_on_keywords_title">Hide based on keywords in a title</string>
    <string name="show_only_closest_instance_of_recurring_event">Show only the closest instance of a recurring event</string>
    <string name="hide_duplicates">Hide duplicates</string>
    <string name="task_scheduling_title">Task scheduling</string>
    <string name="tasks_wo_dates_title">Tasks without start and due dates</string>
    <string name="filter_mode">Filters troubleshooter</string>
    <string name="calendars_prefs">Calendars and Task Lists</string>
    <string name="calendars_prefs_desc">Select the calendars and task lists to display</string>
    <string name="other_prefs_desc">Size, date and time format, etc.</string>
    <string name="other_prefs_title">Other settings</string>
    <string name="appearance_text_size_title">Text size</string>
    <string name="appearance_text_size_desc">Adjust the text size</string>
    <string name="appearance_date_format_desc">Show time in am/pm or 24 hours format</string>
    <string name="appearance_time_format_title">Time format</string>
    <string name="lock_time_zone_off_desc">Unlocked, current zone: %s</string>
    <string name="lock_time_zone_title">Lock time zone</string>
    <string name="snapshot_mode">Lock list of events (Snapshot mode)</string>
    <string name="refresh_period_minutes">Auto refresh period, minutes</string>
    <string name="feedback_prefs">Feedback and Backup</string>
    <string name="feedback_prefs_desc">Get in touch with us, backup and restore settings</string>
    <string name="feedback_github_desc">Provide feedback on the project page</string>
    <string name="feedback_github_title">Visit widget on Github</string>
    <string name="feedback_play_store_desc">Rate and comment on Google Play Store</string>
    <string name="feedback_play_store_title">Visit widget on Google Play Store</string>
    <string name="refresh_desc">Refresh</string>
    <string name="share_events_for_debugging_desc">Create a report to help developers troubleshoot problems.
        Before sharing please filter events to protect your privacy but still demonstrate a problem</string>
    <string name="share_events_for_debugging_title">Share events and settings for debugging</string>
    <string name="backup_settings_title">Backup settings</string>
    <string name="backup_settings_desc">The same as \"Share events for debugging\", but doesn\'t contain events</string>
    <string name="restore_settings_title">Restore settings from a backup</string>
    <string name="restore_settings_desc">Settings of each ToDo Agenda widget should be restored separately</string>
</resources>