<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="widgetInstanceName"
        android:title="@string/widget_instance_name"
        android:singleLine="true" />

    <ListPreference
        android:key="textSizeScale"
        android:defaultValue="1.0"
        android:entries="@array/pref_text_size_entries"
        android:entryValues="@array/pref_text_size_values"
        android:summary="@string/appearance_text_size_desc"
        android:title="@string/appearance_text_size_title" />

    <ListPreference
        android:key="eventEntryLayout"
        android:defaultValue="DEFAULT"
        android:entries="@array/pref_event_entry_layout_entries"
        android:entryValues="@array/pref_event_entry_layout_values"
        android:summary="@string/default_multiline_layout"
        android:title="@string/pref_event_entry_layout_title" />

    <CheckBoxPreference
        android:key="multiline_title"
        android:defaultValue="false"
        android:summary="@string/appearance_multiline_title_desc"
        android:title="@string/appearance_multiline_title_title">
    </CheckBoxPreference>

    <ListPreference
        android:key="dateFormat"
        android:defaultValue="auto"
        android:entries="@array/pref_date_format_entries"
        android:entryValues="@array/pref_date_format_values"
        android:summary="@string/appearance_date_format_desc"
        android:title="@string/appearance_date_format_title" />

    <CheckBoxPreference
        android:key="abbreviateDates"
        android:defaultValue="false"
        android:summary="@string/appearance_abbreviate_dates_desc"
        android:title="@string/appearance_abbreviate_dates_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="showDayHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:summary="@string/appearance_show_day_headers_desc"
        android:title="@string/appearance_show_day_headers_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="showPastEventsUnderOneHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:title="@string/show_past_events_under_one_header"
        android:dependency="showDayHeaders">
    </CheckBoxPreference>

    <ListPreference
        android:key="dayHeaderAlignment"
        android:defaultValue="RIGHT"
        android:dependency="showDayHeaders"
        android:entries="@array/pref_day_header_alignment_entries"
        android:entryValues="@array/pref_day_header_alignment_values"
        android:summary="@string/appearance_day_header_alignment_desc"
        android:title="@string/appearance_day_header_alignment_title" />

    <CheckBoxPreference
        android:key="showDaysWithoutEvents"
        android:defaultValue="false"
        android:dependency="showDayHeaders"
        android:summary="@string/appearance_show_days_without_events_desc"
        android:title="@string/appearance_show_days_without_events_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="showHeader"
        android:defaultValue="true"
        android:summary="@string/appearance_display_header_desc"
        android:title="@string/appearance_display_header_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="lockTimeZone"
        android:defaultValue="false"
        android:persistent="false"
        android:summary="@string/lock_time_zone_off_desc"
        android:title="@string/lock_time_zone_title">
    </CheckBoxPreference>

    <PreferenceCategory android:title="@string/appearance_group_color_title">
        <ListPreference
            android:key="headerTheme"
            android:defaultValue="DARK"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:summary="@string/appearance_header_theme_desc"
            android:title="@string/appearance_header_theme_title" />

        <Preference
            android:key="backgroundColor"
            android:defaultValue="2147483648"
            android:summary="@string/appearance_background_color_desc"
            android:title="@string/appearance_background_color_title" />

        <Preference
            android:key="pastEventsBackgroundColor"
            android:defaultValue="2147548928"
            android:summary="@string/appearance_past_events_background_color_desc"
            android:title="@string/appearance_past_events_background_color_title" />
        
        <ListPreference
            android:key="entryTheme"
            android:defaultValue="BLACK"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:summary="@string/appearance_entries_theme_desc"
            android:title="@string/appearance_entries_theme_title" />
    </PreferenceCategory>

</PreferenceScreen>
