<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="widgetHeaderLayout"
        android:defaultValue="ONE_ROW"
        android:entries="@array/pref_widget_header_layout_entries"
        android:entryValues="@array/pref_widget_header_layout_values"
        android:summary="@string/single_line_layout"
        android:title="@string/widget_header_layout" />

    <CheckBoxPreference
        android:key="showDayHeaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="true"
        android:summary="@string/appearance_show_day_headers_desc"
        android:title="@string/appearance_show_day_headers_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="showPastEventsUnderOneHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:title="@string/show_past_events_under_one_header_title"
        android:summary="@string/show_past_events_under_one_header_desc"
        android:dependency="showDayHeaders">
    </CheckBoxPreference>

    <ListPreference
        android:key="dayHeaderAlignment"
        android:defaultValue="RIGHT"
        android:dependency="showDayHeaders"
        android:entries="@array/pref_day_header_alignment_entries"
        android:entryValues="@array/pref_day_header_alignment_values"
        android:summary="@string/appearance_day_header_alignment_desc"
        android:title="@string/appearance_day_header_alignment_title" />

    <CheckBoxPreference
        android:key="showDaysWithoutEvents"
        android:defaultValue="false"
        android:dependency="showDayHeaders"
        android:summary="@string/appearance_show_days_without_events_desc"
        android:title="@string/appearance_show_days_without_events_title">
    </CheckBoxPreference>

    <ListPreference
        android:key="eventEntryLayout"
        android:defaultValue="DEFAULT"
        android:entries="@array/pref_event_entry_layout_entries"
        android:entryValues="@array/pref_event_entry_layout_values"
        android:summary="@string/default_multiline_layout"
        android:title="@string/pref_event_entry_layout_title" />

    <CheckBoxPreference
        android:key="showEventIcon"
        android:defaultValue="true"
        android:summary="@string/show_event_icon_desc"
        android:title="@string/show_event_icon_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="showNumberOfDaysToEvent"
        android:defaultValue="true"
        android:summary="@string/show_number_of_days_to_event_desc"
        android:title="@string/show_number_of_days_to_event_title">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="multiline_title"
        android:defaultValue="false"
        android:summary="@string/appearance_multiline_title_desc"
        android:title="@string/appearance_multiline_title_title">
    </CheckBoxPreference>

</PreferenceScreen>
