<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="org.andstatus.todoagenda.prefs.GeneralPreferencesFragment"
        android:title="@string/general_prefs" />
    <header
        android:fragment="org.andstatus.todoagenda.prefs.LayoutPreferencesFragment"
        android:title="@string/layout_prefs" />
    <header
        android:fragment="org.andstatus.todoagenda.prefs.ColorsPreferencesFragment"
        android:title="@string/appearance_group_color_title" />
    <header
        android:fragment="org.andstatus.todoagenda.prefs.EventDetailsPreferencesFragment"
        android:summary="@string/event_details_prefs_desc"
        android:title="@string/event_details_prefs" />
    <header
        android:fragment="org.andstatus.todoagenda.prefs.EventFiltersPreferencesFragment"
        android:summary="@string/event_filters_prefs_desc"
        android:title="@string/event_filters_prefs" />
    <header
        android:fragment="org.andstatus.todoagenda.prefs.EventSourcesPreferencesFragment"
        android:summary="@string/calendars_prefs_desc"
        android:title="@string/calendars_prefs" />
    <header
        android:fragment="org.andstatus.todoagenda.prefs.FeedbackPreferencesFragment"
        android:summary="@string/feedback_prefs_desc"
        android:title="@string/feedback_prefs" />

</preference-headers>